--- a/describe/计算机网络.md
+++ b/describe/计算机网络.md
@@ -1,9 +1,8 @@
 ### 概述
 1. 网络的网络：网络把主机连接起来，而互联网是把多种不同的网络连接起来，因此互联网是网络的网络，且其实全球范围的互连网。
 2. ISP（Internet service provider）    
-  互联网服务提供商ISP可以从互联网管理机构获得许多ip地址，同时拥有通信线路及路由器等设备，个或机构向ISP缴纳一定的费用就可以接入互联网。   
-  目前的互联网是一种多层次ISP结构，ISP根据覆盖范围的大小分为第一层ISP、区域ISP和接入ISP。互联网交换点IXP允许两个ISP直接连接而不用经过第三个ISP。   
-  ![img_5.png](img/img_5.png)    
+    互联网服务提供商ISP可以从互联网管理机构获得许多ip地址，同时拥有通信线路及路由器等设备，个人或机构向ISP缴纳一定的费用就可以接入互联网。目前的互联网是一种多层次ISP结构，ISP根据覆盖范围的大小分为第一层ISP、区域ISP和接入ISP。互联网交换点IXP允许两个ISP直接连接而不用经过第三ISP。 
+    ![img_5.png](img/img_5.png)    
 3. 主机之间的通信方式   
    * 客户-服务器（C/S）：客户是服务的请求方，服务器是服务的提供方    
      ![img_6.png](img/img_6.png)   
@@ -34,19 +33,18 @@
       * 会话层：建立及管理会话
     * TCP/IP：它只有四层，相当于五层协议中数据链路层和物理层合并为网络接口层。TCP/IP体系结构不严格遵循OSI分层概念，应用层可能会直接使用IP层或者网络接口层。  
       ![img_10.png](img/img_10.png)
-    * 数据在各层之间的传递过程：在向下的过程中，需要添加下层协议所需要的首部和尾部，而在向上的过程中不断拆开首部和尾部。  
-      路由器只有下面三层协议，因为路由器位于网络核心中，不需要为进程或者应用程序提供服务，因此也就不需要传输层和应用层。
+    * 数据在各层之间的传递过程：在向下的过程中，需要添加下层协议所需要的首部和尾部，而在向上的过程中不断拆开首部和尾部。路由器只有下面三层协议，因为路由器位于网络核心中，不需要为进程或者应用程序提供服务，因此也就不需要传输层和应用层。
 ### 物理层
 1. 通信方式
     根据信息在传输线路上的传送方向，分为以下三种通信方式：  
      * 单工通信：单向传输
      * 半双工通信：双向交替传输
-     * 全双工通信：双向同事传输
+     * 全双工通信：双向同时传输
 2. 带通调制：模拟信号是连续的信号，数字信号是离散的信号，带通调制把数字信号转换为模拟信号  
     ![img_11.png](img/img_11.png)  
 ### 数据链路层
 1. 基本问题
-   * 分装成帧：将网络层传下来的分组添加首部和尾部，用于标记帧的开始和结束。
+   * 封装成帧：将网络层传下来的分组添加首部和尾部，用于标记帧的开始和结束。
      ![img_12.png](img/img_12.png)  
    * 透明传输：透明表示一个实际存在的事物看起来好像不存在一样。帧使用首部和尾部进行定界，如果帧的数据部分含有和首部尾部相同的内容，那么帧的开始和结束位置就会被错误的判定。需要在数据部分出现首部尾部相同的内容前面插入转义字符。如果数据部分出现转义字符，那么就在转义字符前面再加个转义字符。在接收端进行处理之后可以还原出原始数据。这个过程透明传输的内容是转义字符，用户察觉不到转义字符的存在。  
      ![img_13.png](img/img_13.png)  
@@ -70,13 +68,13 @@
      * A 和 C 字段暂时没有意义
      * FCS 字段是使用 CRC 的检验序列
      * 信息部分的长度不超过 1500  
-     ![img_18.png](img/img18.png)  
+       ![img_18.png](img/img18.png)  
 5. mac地址：MAC 地址是链路层地址，长度为 6 字节（48 位），用于唯一标识网络适配器（网卡）。一台主机拥有多少个网络适配器就有多少个 MAC 地址。例如笔记本电脑普遍存在无线网络适配器和有线网络适配器，因此就有两个 MAC 地址。
 ### 网络层
 网络层是整个互联网的核心，因此应当让网络层尽可能简单。网络层向上只提供简单灵活的、无连接的、尽最大努力交互的数据报服务。使用 IP 协议，可以把异构的物理网络连接起来，使得在网络层看起来好像是一个统一的网络。  
 ![img_19.png](img/img_19.png)  
 1. ip数据报格式  
-  ![img_20.png](img/img_20.png)
+    ![img_20.png](img/img_20.png)
   * 版本号：有 4（IPv4）和 6（IPv6）两个值
   * 首部长度： 占 4 位，因此最大值为 15。值为 1 表示的是 1 个 32 位字的长度，也就是 4 字节。因为固定部分长度为 20 字节，因此该值最小为 5。如果可选字段的长度不是 4 字节的整数倍，就用尾部的填充部分来填充。
   * 区分服务：用来获得更好的服务，一般情况下不使用。
@@ -103,14 +101,14 @@
     * 终止FIN：用来释放一个连接，当 FIN=1 时，表示此报文段的发送方的数据已发送完毕，并要求释放连接。
     * 窗口：窗口值作为接收方让发送方设置其发送窗口的依据。之所以要有这个限制，是因为接收方的数据缓存空间是有限的。
 4. TCP三次握手  
-  ![img_24.png](img/img_24.png)    
-假设 A 为客户端，B 为服务器端。  
+    ![img_24.png](img/img_24.png)    
+   假设 A 为客户端，B 为服务器端。  
    * 首先 B 处于 LISTEN（监听）状态，等待客户的连接请求。
    * A 向 B 发送连接请求报文，SYN=1，ACK=0，选择一个初始的序号 x。
    * B 收到连接请求报文，如果同意建立连接，则向 A 发送连接确认报文，SYN=1，ACK=1，确认号为 x+1，同时也选择一个初始的序号 y。
    * A 收到 B 的连接确认报文后，还要向 B 发出确认，确认号为 y+1，序号为 x+1。
    * B 收到 A 的确认后，连接建立。  
-三次握手的原因：  
+     三次握手的原因：  
      第三次握手是为了防止失效的连接请求到达服务器，让服务器错误打开连接。客户端发送的连接请求如果在网络中滞留，那么就会隔很长一段时间才能收到服务器端发回的连接确认。客户端等待一个超时重传时间之后，就会重新请求连接。但是这个滞留的连接请求最后还是会到达服务器，如果不进行三次握手，那么服务器就会打开两个连接。如果有第三次握手，客户端会忽略服务器之后发送的对滞留连接请求的连接确认，不进行第三次握手，因此就不会再次打开连接。
 5. TCP 的四次挥手  
    ![img_25.png](img/img_25.png)   
@@ -120,9 +118,9 @@
    * 当 B 不再需要连接时，发送连接释放报文，FIN=1。
    * A 收到后发出确认，进入 TIME-WAIT 状态，等待 2 MSL（最大报文存活时间）后释放连接。
    * B 收到 A 的确认后释放连接。  
-   四次挥手的原因：  
+     四次挥手的原因：  
      客户端发送了 FIN 连接释放报文之后，服务器收到了这个报文，就进入了 CLOSE-WAIT 状态。这个状态是为了让服务器端发送还未传送完毕的数据，传送完毕之后，服务器会发送 FIN 连接释放报文。  
-   TIME_WAIT：  
+     TIME_WAIT：  
      客户端接收到服务器端的 FIN 报文后进入此状态，此时并不是直接进入 CLOSED 状态，还需要等待一个时间计时器设置的时间 2MSL。这么做有两个理由：确保最后一个确认报文能够到达。如果 B 没收到 A 发送来的确认报文，那么就会重新发送连接释放请求报文，A 等待一段时间就是为了处理这种情况的发生；等待一段时间是为了让本连接持续时间内所产生的所有报文都从网络中消失，使得下一个新的连接不会出现旧的连接请求报文。
 6. TCP 可靠传输：TCP 使用超时重传来实现可靠传输：如果一个已经发送的报文段在超时时间内没有收到确认，那么就重传这个报文段。一个报文段从发送再到接收到确认所经过的时间称为往返时间 RTT
 7. TCP 流量控制：流量控制是为了控制发送方发送速率，保证接收方来得及接收。接收方发送的确认报文中的窗口字段可以用来控制发送方窗口大小，从而影响发送方的发送速率。将窗口字段设置为 0，则发送方不能发送数据。
@@ -193,4 +191,3 @@
       * 连接建立之后，浏览器生成 HTTP GET 报文，并交付给 HTTP 服务器。
       * HTTP 服务器从 TCP 套接字读取 HTTP GET 报文，生成一个 HTTP 响应报文，将 Web 页面内容放入报文主体中，发回给主机。
       * 浏览器收到 HTTP 响应报文后，抽取出 Web 页面内容，之后进行渲染，显示 Web 页面。
-     
