--- a/describe/计算机网络.md
+++ b/describe/计算机网络.md
@@ -1,5 +1,5 @@
 ### 概述
-1. 网络的网络：网络把主机连接起来，而互联网是把多种不同的网络连接起来，因此互联网是网络的网络，且其实全球范围的互连网。
+1. 网络的网络：网络把主机连接起来，而互联网是把多种不同的网络连接起来，因此互联网是网络的网络，且其是全球范围的互连网。
 2. ISP（Internet service provider）    
     互联网服务提供商ISP可以从互联网管理机构获得许多ip地址，同时拥有通信线路及路由器等设备，个人或机构向ISP缴纳一定的费用就可以接入互联网。目前的互联网是一种多层次ISP结构，ISP根据覆盖范围的大小分为第一层ISP、区域ISP和接入ISP。互联网交换点IXP允许两个ISP直接连接而不用经过第三ISP。 
     ![img_5.png](img/img_5.png)    
@@ -23,7 +23,7 @@
 6. 计算机网络体系结构  
     ![img_9.png](img/img_9.png)   
     * 五层协议
-      * 应用层：为特定引用程序提供数据传输服务，例如HTTP、DNS等协议，数据单位为报文
+      * 应用层：为特定应用程序提供数据传输服务，例如HTTP、DNS等协议，数据单位为报文
       * 运输层：为进程提供通用数据传输服务。由于应用层协议很多，定义通用的传输层协议就可以支持不断增加的应用层协议。运输层包括两种协议：传输控制协议TCP，提供面向连接、可靠的数据传输服务，数据单位为报文段；用户数据报协议UDP，提供无连接、尽最大努力交付的数据传输服务，数据单位为用户数据报。TCP主要提供完整性服务，UPD主要提供及时性服务
       * 网络层：为主机提供数据传输服务。而传输层协议是为主机中的进程提供数据传输服务。网络层把传输层传递下来的报文段或用户数据报封装成分组
       * 数据链路层：网络层针对的还是主机之间的数据传输服务，而主机之间可以有很多链路，链路层协议就是为同一条链路的主机提供数据传输服务。数据链路层把网络层传递下来的分组封装成帧。
